# CV-repo

Algorithms/: algrorithms.c  arrayStuff.c
Bank Managment System/: account.c  account.h
HTTP server/: index.html  main  server
Movies watched/: main.cpp  movie.h
Outdated/Algorithms/: arrayStuff.h  search.c  search.h  sort.c  sort.h
Outdated/Bank Managment System/: bankManagment.c  main.c
Outdated/HTTP server/: server.c
Outdated/Linked List/: main.c
Outdated/Movies watched/: movie.cpp
Outdated/Selection Sort/: main.c
Up to date/algorithms/: VectorGenerator.cpp  VectorGenerator.hpp  main.cpp  meson.build
Up to date/algorithms/recursion/: Recurtion.cpp  Recurtion.hpp  Sum.cpp  Sum.hpp
Up to date/algorithms/search/: BinarySearch.cpp  BinarySearch.hpp
Up to date/algorithms/sort/: MergeSort.cpp  MergeSort.hpp  QuickSort.cpp  QuickSort.hpp  SelectionSort.cpp  SelectionSort.hpp
