project('Algorithms', 'cpp')

executable('Algorithms',
           'main.cpp',
           'VectorGenerator.cpp',
           './sort/SelectionSort.cpp',
           './sort/QuickSort.cpp',
           './search/BinarySearch.cpp',
           './recursion/Sum.cpp',
           './recursion/Recurtion.cpp',
           cpp_args : '-Wall',
           )